--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,48 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
+	
+	<!-- spring 容器监听web 容器的监听器，同时将上述的配置文件传递给spring容器进行加载 -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<!-- spring配置 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			classpath:spring/applicationContext.xml;
+		</param-value>
+	</context-param>
+	
+	<!-- springmvc的前端控制器 -->
+	<servlet>
+		<servlet-name>springMvc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- contextConfigLocation不是必须的， 如果不配置contextConfigLocation， springmvc的配置文件默认在：WEB-INF/servlet的name+"-servlet.xml" -->
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring/springmvc.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>springMvc</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	
+	
+	 <!-- logback配置   -->  
+	 <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath:logback.xml</param-value>
+    </context-param>
+   
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
+	
+	
 	<!-- Register the HttpServlet implementation -->
 	<filter>
 		<filter-name>CorsFilter</filter-name>
@@ -17,7 +59,7 @@
 		</init-param>
 		<init-param>
 			<param-name>cors.allowed.headers</param-name>
-			<param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,accept,content-type,dataserviceversion,maxdataserviceversion,JWT,jwt,hrcloud_user_token</param-value>
+			<param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,accept,content-type,dataserviceversion,maxdataserviceversion,JWT,jwt</param-value>
 		</init-param>
 		<init-param>
 			<param-name>cors.exposed.headers</param-name>
@@ -32,10 +74,6 @@
 			<param-value>10</param-value>
 		</init-param>
 	</filter>
-	<filter-mapping>
-		<filter-name>CorsFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
 	<servlet>
 		<servlet-name>UserInformation</servlet-name>
 		<servlet-class>odata.service.user.web.UserOdataServlet</servlet-class>
@@ -47,7 +85,7 @@
 		<servlet-name>UserInformation</servlet-name>
 		<url-pattern>/UserInformation/*</url-pattern>
 	</servlet-mapping>
-
+	
 	<servlet>
 		<servlet-name>UserScoreInformation</servlet-name>
 		<servlet-class>odata.service.user_score.web.User_ScoreOdataServlet</servlet-class>
@@ -58,8 +96,8 @@
 	<servlet-mapping>
 		<servlet-name>UserScoreInformation</servlet-name>
 		<url-pattern>/UserScoreInformation/*</url-pattern>
-	</servlet-mapping>
-
+	</servlet-mapping>	
+	
 	<servlet>
 		<servlet-name>UserScoreInformation_All</servlet-name>
 		<servlet-class>odata.service.user_score.web.User_Score_TotalOdataServlet</servlet-class>
@@ -70,8 +108,8 @@
 	<servlet-mapping>
 		<servlet-name>UserScoreInformation_All</servlet-name>
 		<url-pattern>/UserScoreInformation_All/*</url-pattern>
-	</servlet-mapping>
-
+	</servlet-mapping>		
+	
 	<servlet>
 		<servlet-name>UserUpdateScoreInformation</servlet-name>
 		<servlet-class>odata.service.user_score.web.User_ScoreUpdateOdataServlet</servlet-class>
@@ -82,7 +120,7 @@
 	<servlet-mapping>
 		<servlet-name>UserUpdateScoreInformation</servlet-name>
 		<url-pattern>/UserUpdateScore</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>		
 
 	<servlet>
 		<servlet-name>UserLogin</servlet-name>
@@ -93,7 +131,7 @@
 		<servlet-name>UserLogin</servlet-name>
 		<url-pattern>/UserLogin</url-pattern>
 	</servlet-mapping>
-
+	
 	<servlet>
 		<servlet-name>UserRefresh</servlet-name>
 		<servlet-class>odata.service.login.web.ServerRefresh</servlet-class>
@@ -123,16 +161,6 @@
 		<servlet-name>SFLearningToken</servlet-name>
 		<url-pattern>/SFLearningToken</url-pattern>
 	</servlet-mapping>
-	
-	<servlet>
-		<servlet-name>SFLearningUserUpdate</servlet-name>
-		<servlet-class>odata.service.sflearning.web.SFlearningOdataUserUpdate</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>SFLearningUserUpdate</servlet-name>
-		<url-pattern>/SFLearningUserUpdate</url-pattern>
-	</servlet-mapping>	
 
 	<servlet>
 		<servlet-name>SFLearningHistory</servlet-name>
@@ -143,42 +171,11 @@
 		<servlet-name>SFLearningHistory</servlet-name>
 		<url-pattern>/SFLearningHistory</url-pattern>
 	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>WechatLogin</servlet-name>
-		<servlet-class>odata.service.wechat.web.Wechat_Login</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>WechatLogin</servlet-name>
-		<url-pattern>/WechatLogin</url-pattern>
-	</servlet-mapping>
-	
-	<servlet>
-		<servlet-name>WechatUpdateToken</servlet-name>
-		<servlet-class>odata.service.wechat.web.Wechat_Update_Token</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>WechatUpdateToken</servlet-name>
-		<url-pattern>/WechatUpdateToken</url-pattern>
-	</servlet-mapping>	
-	
-		<servlet>
-		<servlet-name>WechatUserInfoUpdate</servlet-name>
-		<servlet-class>odata.service.wechat.web.Wechat_UserInfo_Update</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>WechatUserInfoUpdate</servlet-name>
-		<url-pattern>/WechatUserInfoUpdate</url-pattern>
-	</servlet-mapping>	
-
 	<!-- Declare the JNDI lookup of the default data source -->
 	<resource-ref>
 		<res-ref-name>jdbc/DefaultDB</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
+		<res-auth>Container</res-auth> 
 	</resource-ref>
 
 </web-app>
