--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -178,4 +178,13 @@
 		<res-auth>Container</res-auth> 
 	</resource-ref>
 
+	<!-- 首页拦截器 定义 -->
+	<filter>
+		<filter-name>SessionFilter</filter-name>
+		<filter-class>odata.service.login.filter.UserSessionFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>SessionFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
